--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <header id="home-header">
+        <div id="header-img"></div>
+        <h1>SUBL'IMMO</h1>
+        <h2>L'agence immobilière 100 % en ligne</h2>
+    </header>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfony/sublimo/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfony/sublimo/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <main class="container-fluid p-5">
+
+        <div class="row">
+            <div class="col-12">
+                <h2>Les logements</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            {# affichage des 6 dernières maisons #}
+        </div>
+
+        <div class="row">
+            <div class="col-12 text-center pt-5">
+                <a href="#" class="btn btn-secondary">Voir tout</a>
+            </div>
+        </div>
+
+    </main>
+
 {% endblock %}
